--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,30 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.diet4j</groupId>
-    <artifactId>org.diet4j</artifactId>
+    <artifactId>diet4j</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>org.diet4j</name>
+    <name>diet4j</name>
     <url>http://diet4j.org/</url>
     <packaging>pom</packaging>
 
     <modules>
-        <module>org.diet4j.cmdline</module>
-        <module>org.diet4j.core</module>
-        <module>org.diet4j.tomcat</module>
+        <module>diet4j-cmdline</module>
+        <module>diet4j-core</module>
+        <module>diet4j-status</module>
+        <module>diet4j-tomcat</module>
     </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.3</version>
+                <configuration>
+                    <aggregate>true</aggregate>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
