don't bundle Tomcat! replace main artifact when aggregating diet4j-core

--- a/diet4j-tomcat/pom.xml
+++ b/diet4j-tomcat/pom.xml
@@ -21,6 +21,7 @@
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-catalina</artifactId>
             <version>8.0.5</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -51,7 +52,8 @@
                 <configuration>
                     <descriptors>
                         <descriptor>src/assembly/all.xml</descriptor>
-                    </descriptors> 
+                    </descriptors>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
             </plugin>
         </plugins>
