--- a/diet4j-cmdline/pom.xml
+++ b/diet4j-cmdline/pom.xml
@@ -49,7 +49,8 @@
                 <configuration>
                     <descriptors>
                         <descriptor>src/assembly/all.xml</descriptor>
-                    </descriptors> 
+                    </descriptors>
+                    <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
                             <mainClass>org.diet4j.cmdline.CmdlineBootLoader</mainClass>
