--- a/diet4j-tomcat/pom.xml
+++ b/diet4j-tomcat/pom.xml
@@ -8,13 +8,18 @@
     <parent>
         <groupId>org.diet4j</groupId>
         <artifactId>diet4j</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.7-SNAPSHOT</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>diet4j-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>diet4j-inclasspath</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
