--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.diet4j</groupId>
     <artifactId>diet4j</artifactId>
-    <version>0.7</version>
+    <version>0.7-SNAPSHOT</version>
 
     <name>diet4j</name>
     <url>http://diet4j.org/</url>
