--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.diet4j</groupId>
     <artifactId>diet4j</artifactId>
-    <version>0.7</version>
+    <version>0.8-SNAPSHOT</version>
 
     <name>diet4j</name>
     <url>http://diet4j.org/</url>
@@ -110,7 +110,7 @@ automatically assemble them at run-time without needing gigantic JARs.</descript
         <connection>scm:git:https://github.com/diet4j/diet4j.git</connection>
         <developerConnection>scm:git:https://github.com/diet4j/diet4j.git</developerConnection>
         <url>https://github.com/diet4j/diet4j/</url>
-      <tag>diet4j-0.7</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
