--- a/diet4j-status/pom.xml
+++ b/diet4j-status/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.diet4j</groupId>
         <artifactId>diet4j</artifactId>
-        <version>0.8-SNAPSHOT</version>
+        <version>0.8</version>
     </parent>
 
     <dependencies>
