--- a/diet4j-core/pom.xml
+++ b/diet4j-core/pom.xml
@@ -38,4 +38,9 @@
             </plugin>
         </plugins>
     </build>
+
+    <properties>
+        <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
+        <build.timestamp>${maven.build.timestamp}</build.timestamp>
+    </properties>
 </project>
