--- a/diet4j-inclasspath/pom.xml
+++ b/diet4j-inclasspath/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.diet4j</groupId>
         <artifactId>diet4j</artifactId>
-        <version>0.12</version>
+        <version><!-- PKGVER -->0.13<!-- /PKGVER --></version>
     </parent>
 
     <dependencies>
