--- a/diet4j-inclasspath/pom.xml
+++ b/diet4j-inclasspath/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.diet4j</groupId>
         <artifactId>diet4j</artifactId>
-        <version><!-- PKGVER -->0.15<!-- /PKGVER --></version>
+        <version><!-- PKGVER -->0.16<!-- /PKGVER --></version>
     </parent>
 
     <dependencies>
@@ -21,8 +21,8 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
                 <configuration>
                     <archive>
                         <addMavenDescriptor>false</addMavenDescriptor>
@@ -30,8 +30,8 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.5.3</version>
                 <executions>
                     <execution>
                         <id>all</id>
