--- a/diet4j-tomcat/pom.xml
+++ b/diet4j-tomcat/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.diet4j</groupId>
         <artifactId>diet4j</artifactId>
-        <version><!-- PKGVER -->0.15<!-- /PKGVER --></version>
+        <version><!-- PKGVER -->0.16<!-- /PKGVER --></version>
     </parent>
 
     <dependencies>
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-catalina</artifactId>
-            <version>8.0.5</version>
+            <version>${tomcat.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -33,8 +33,8 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
                 <configuration>
                     <archive>
                         <addMavenDescriptor>false</addMavenDescriptor>
@@ -43,8 +43,8 @@
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.5.3</version>
                 <executions>
                     <execution>
                         <id>all</id>
