--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.diet4j</groupId>
     <artifactId>diet4j</artifactId>
-    <version><!-- PKGVER -->0.15<!-- /PKGVER --></version>
+    <version><!-- PKGVER -->0.16<!-- /PKGVER --></version>
     <name>diet4j</name>
     <url>http://diet4j.org/</url>
     <packaging>pom</packaging>
@@ -26,7 +26,7 @@ automatically assemble them at run-time without needing gigantic JARs.</descript
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.5.3</version>
                 <configuration>
                     <useReleaseProfile>false</useReleaseProfile>
                     <releaseProfiles>diet4j-release</releaseProfiles>
@@ -36,7 +36,7 @@ automatically assemble them at run-time without needing gigantic JARs.</descript
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.3</version>
+                <version>2.10.4</version>
                 <executions>
                     <execution>
                         <id>aggregate</id>
@@ -50,7 +50,7 @@ automatically assemble them at run-time without needing gigantic JARs.</descript
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.3</version>
+                <version>1.6.8</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
@@ -59,6 +59,26 @@ automatically assemble them at run-time without needing gigantic JARs.</descript
                 </configuration>
             </plugin>
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.0.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>templating-maven-plugin</artifactId>
+                    <version>1.0.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <licenses>
@@ -80,7 +100,7 @@ automatically assemble them at run-time without needing gigantic JARs.</descript
         <connection>scm:git:https://github.com/diet4j/diet4j.git</connection>
         <developerConnection>scm:git:https://github.com/diet4j/diet4j.git</developerConnection>
         <url>https://github.com/diet4j/diet4j/</url>
-        <tag>diet4j-0.9</tag>
+        <tag>diet4j-${project.version}</tag>
     </scm>
 
     <distributionManagement>
@@ -102,6 +122,7 @@ automatically assemble them at run-time without needing gigantic JARs.</descript
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
+                        <version>3.0.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -114,6 +135,7 @@ automatically assemble them at run-time without needing gigantic JARs.</descript
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.10.4</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -126,7 +148,7 @@ automatically assemble them at run-time without needing gigantic JARs.</descript
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.5</version>
+                        <version>1.6</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -147,10 +169,11 @@ automatically assemble them at run-time without needing gigantic JARs.</descript
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.9</maven.compiler.source>
+        <maven.compiler.target>1.9</maven.compiler.target>
 
-        <commons-daemon.version>1.0.9</commons-daemon.version>
+        <tomcat.version>8.5.23</tomcat.version>
+        <commons-daemon.version>1.0.15</commons-daemon.version>
         <junit.version>4.12</junit.version>
     </properties>
 </project>
