--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,14 @@ automatically assemble them at run-time without needing gigantic JARs.</descript
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
         </plugins>
 
         <pluginManagement>
