--- a/diet4j-jsvc/systemd/diet4j-jsvc@.service
+++ b/diet4j-jsvc/systemd/diet4j-jsvc@.service
@@ -17,16 +17,17 @@ Environment='OUTFILE=SYSLOG'
 Environment='PIDFILE=/var/run/diet4j-jsvc-%i.pid'
 Environment='JAVA_HOME=/usr/lib/jvm/default-runtime'
 Environment='JSVC_OPTS=-debug -nodetach -Djava.io.tmpdir=/var/tmp/diet4j-jsvc-%i'
-# Environment='DEBUG_OPTS=-Xdebug -Xrunjdwp:transport=dt_socket,address=*:8888,server=y,suspend=y'
+# Environment='DEBUG_OPTS=-Xdebug -Xrunjdwp:transport=dt_socket,address=8888,server=y,suspend=y'
+# For debugging, add those right after $JSVC_OPTS below
 Environment='DIET4J_VERSION=0.16'
-Environment='DIET4J_ARGS=--directory /usr/lib/java --config /etc/diet4j/diet4j-jsvc-%i.properties'
+Environment='DIET4J_ARGS=--config /etc/diet4j/diet4j-jsvc-%i.properties'
 
 # Those ${foo} vs. $foo look disorganized, but they are not: distinguish between one argument that may
 # contain spaces, and one variable that should expand to several arguments
 
 ExecStart=/usr/bin/jsvc \
         $JSVC_OPTS \
-        -cp /usr/lib/java/org/diet4j/diet4j-jsvc/${DIET4J_VERSION}/diet4j-jsvc-${VERSION}.jar \
+        -cp /usr/lib/java/org/diet4j/diet4j-jsvc/${DIET4J_VERSION}/diet4j-jsvc-${DIET4J_VERSION}.jar \
         -java-home ${JAVA_HOME} \
         -pidfile ${PIDFILE} \
         -errfile ${ERRFILE} \
