--- a/diet4j-jsvc/systemd/diet4j-jsvc@.service
+++ b/diet4j-jsvc/systemd/diet4j-jsvc@.service
@@ -12,27 +12,34 @@ After=network.target
 [Service]
 Type=simple
 PIDFile=/var/run/diet4j-jsvc-%i.pid
+Environment='PIDFILE=/var/run/diet4j-jsvc-%i.pid'
 Environment='ERRFILE=SYSLOG'
 Environment='OUTFILE=SYSLOG'
-Environment='PIDFILE=/var/run/diet4j-jsvc-%i.pid'
 Environment='JAVA_HOME=/usr/lib/jvm/default-runtime'
-Environment='JSVC_OPTS=-debug -nodetach -Djava.io.tmpdir=/var/tmp/diet4j-jsvc-%i'
-# Environment='DEBUG_OPTS=-Xdebug -Xrunjdwp:transport=dt_socket,address=8888,server=y,suspend=y'
-# For debugging, add those right after $JSVC_OPTS below
-Environment='DIET4J_VERSION=0.17'
+Environment='JSVC_OPTS=-server -debug -nodetach -Djava.io.tmpdir=/var/tmp/diet4j-jsvc-%i'
+Environment='JSVC_USER=root'
+Environment='DIET4J_VERSION=0.18'
 Environment='DIET4J_ARGS=--config /etc/diet4j/diet4j-jsvc-%i.properties'
+
+# For debugging, comment-out the next line
+# Environment='DEBUG_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=8888'
+
+# Optional environment file that overrides values defined above:
 EnvironmentFile=-/etc/diet4j/diet4j-jsvc-%i.env
-# (optional environment file that overrides values defined here)
 
 # Those ${foo} vs. $foo look disorganized, but they are not: distinguish between one argument that may
 # contain spaces, and one variable that should expand to several arguments
 
-ExecStartPre=/usr/bin/perl -MUBOS::Utils -e 'UBOS::Utils::mkdirDashP( "/var/tmp/diet4j-jsvc-%i" );'
+ExecStartPre=/bin/mkdir -p -m0700 /var/tmp/diet4j-jsvc-%i
+ExecStartPre=/bin/touch ${PIDFILE}
+ExecStartPre=/bin/chown ${JSVC_USER} /var/tmp/diet4j-jsvc-%i ${PIDFILE}
 
 ExecStart=/usr/bin/jsvc \
         $JSVC_OPTS \
+        $DEBUG_OPTS \
         -cp /usr/lib/java/org/diet4j/diet4j-jsvc/${DIET4J_VERSION}/diet4j-jsvc-${DIET4J_VERSION}.jar \
         -java-home ${JAVA_HOME} \
+        -user ${JSVC_USER} \
         -pidfile ${PIDFILE} \
         -errfile ${ERRFILE} \
         -outfile ${OUTFILE} \
@@ -40,6 +47,6 @@ ExecStart=/usr/bin/jsvc \
         $DIET4J_ARGS
 
 ExecStop=/usr/bin/jsvc \
-            -pidfile ${PIDFILE} \
-            -stop \
-            org.diet4j.jsvc.Diet4jDaemon
+        -pidfile ${PIDFILE} \
+        -stop \
+        org.diet4j.jsvc.Diet4jDaemon
