--- a/diet4j-jsvc/systemd/diet4j-jsvc@.service
+++ b/diet4j-jsvc/systemd/diet4j-jsvc@.service
@@ -18,12 +18,12 @@ Environment='OUTFILE=SYSLOG'
 Environment='JAVA_HOME=/usr/lib/jvm/default-runtime'
 Environment='JSVC_OPTS=-server -debug -nodetach -Djava.io.tmpdir=/var/tmp/diet4j-jsvc-%i'
 Environment='JSVC_USER=root'
-Environment='DIET4J_VERSION=0.18.3'
+Environment='DIET4J_VERSION=0.18.6'
 Environment='DIET4J_ARGS=--config /etc/diet4j/diet4j-jsvc-%i.properties'
 
-# For debugging up to Java 8, comment-out the next line
+# For debugging up to and including Java 8, comment-out the next line and connect to port 8888
 # Environment='DEBUG_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=8888'
-# For debugging from Java 9 onwards, comment-out the next line
+# For debugging from Java 9 onwards, comment-out the next line and connect to port 8888
 # Environment='DEBUG_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8888'
 
 # Optional environment file that overrides values defined above:
