Reorganize config file so it is easier for other scripts to reuse the config Remove Tomcat; not used in a long time

--- a/diet4j-cmdline/etc/diet4j-defaults.conf
+++ b/diet4j-cmdline/etc/diet4j-defaults.conf
@@ -18,19 +18,10 @@
 # under the License.
 #
 
-if [[ ! -r /etc/diet4j/diet4j-defaults.conf ]]; then
-    echo "FATAL: Cannot read /etc/diet4j/diet4j-defaults.conf" > /dev/stderr
-    exit 1
-fi
+DIET4J_VERSION=0.24
+DIET4J_DIRECTORIES=/usr/lib/java:/ubos/lib/java
+DIET4J_JAR=/usr/lib/java/org/diet4j/diet4j-cmdline/${DIET4J_VERSION}/diet4j-cmdline-${DIET4J_VERSION}.jar
 
-. /etc/diet4j/diet4j-defaults.conf
-
-if [[ -r /etc/diet4j/diet4j.conf ]]; then
-  . /etc/diet4j/diet4j.conf
-fi
-
-if [[ -z "${JAVA_HOME}" ]]; then
-    java ${JAVA_OPTS} -jar ${DIET4J_JAR} --directories ${DIET4J_DIRECTORIES} $@
-else
-    "${JAVA_HOME}/bin/java" ${JAVA_OPTS} -jar ${DIET4J_JAR} --directories ${DIET4J_DIRECTORIES} $@
-fi
+# for debugging:
+# JAVA_OPTS='-Xdebug -Xrunjdwp:transport=dt_socket,address=*:8888,server=y,suspend=y'
+# WARNING: this opens up your debugger port to the world; maybe you want to use something other than *
