Permit overriding of directories with env var

--- a/diet4j-cmdline/etc/diet4j-defaults.conf
+++ b/diet4j-cmdline/etc/diet4j-defaults.conf
@@ -19,8 +19,12 @@
 #
 
 DIET4J_VERSION=0.24
-DIET4J_DIRECTORIES=/usr/lib/java:/ubos/lib/java
-DIET4J_JAR=/usr/lib/java/org/diet4j/diet4j-cmdline/${DIET4J_VERSION}/diet4j-cmdline-${DIET4J_VERSION}.jar
+if [[ -z "${DIET4J_DIRECTORIES}" ]]; then
+    DIET4J_DIRECTORIES=/usr/lib/java:/ubos/lib/java
+fi
+if [[ -z "${DIET4J_JAR}" ]]; then
+    DIET4J_JAR=/usr/lib/java/org/diet4j/diet4j-cmdline/${DIET4J_VERSION}/diet4j-cmdline-${DIET4J_VERSION}.jar
+fi
 
 # for debugging:
 # JAVA_OPTS='-Xdebug -Xrunjdwp:transport=dt_socket,address=*:8888,server=y,suspend=y'
