Commandline bootloader now looks at all cli arguments, and removes those it thinks are for itself. This solves the problem with invoking diet4j from a shell script whose parameters may include -v. In the default configuration, do not log ModuleClassLoader events at the same logging level as the rest of the program Fix help text Better error message Bumped version

--- a/diet4j-cmdline/etc/log-default-v1-java.properties
+++ b/diet4j-cmdline/etc/log-default-v1-java.properties
@@ -1,6 +1,7 @@
 handlers= java.util.logging.ConsoleHandler
 
 .level= INFO
+org.diet4j.core.ModuleClassLoader.level = WARNING
 
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 java.util.logging.ConsoleHandler.level = INFO
