--- a/diet4j-cmdline/etc/log-default-java.properties
+++ b/diet4j-cmdline/etc/log-default-java.properties
@@ -1,6 +1,7 @@
 handlers= java.util.logging.ConsoleHandler
 
 .level= WARNING
+org.diet4j.core.ModuleClassLoader.level = WARNING
 
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 java.util.logging.SimpleFormatter.format = %4$s: %5$s%n
